# scraper_adrialece

./: .gitignore  Pipfile  constants.py  pyproject.toml  run.py  scraper.py  test_glasses_scraper.py
