[tool.poetry]
name = "scraper-adrialece"
version = "0.1.0"
description = ""
authors = ["Mauro Orlic <mauro.orlic@gmail.com>"]
readme = "README.md"
packages = [{include = "scraper_adrialece"}]

[tool.poetry.dependencies]
python = "^3.10"
bs4 = "^0.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
